--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "cassette",
-	"name": "Cassette",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "Make your media a part of your knowledge. Sync your media items from MyAnimeList, AniList, and Simkl directly into your vault.",
-	"author": "Zarakasi",
-	"authorUrl": "https://github.com/zara-kasi",
-	"isDesktopOnly": false
+        "id": "cassette",
+        "name": "Cassette",
+        "version": "1.0.0",
+        "minAppVersion": "0.15.0",
+        "description": "Make your media a part of your knowledge. Sync your anime, manga, movies, and TV shows from MyAnimeList and Simkl directly into your vault",
+        "author": "Zarakasi",
+        "authorUrl": "https://github.com/zara-kasi",
+        "isDesktopOnly": false
 }
