Change README sync schedule to weekly on Sundays

--- a/.github/workflows/sync-readme.yml
+++ b/.github/workflows/sync-readme.yml
@@ -4,9 +4,9 @@ on:
   # Manual trigger
   workflow_dispatch:
   
-  # Scheduled run (every day at 2 AM UTC)
+  # Scheduled run Weekly on Sunday
   schedule:
-    - cron: '0 2 * * *'
+    - cron: '0 0 * * 0'
 
 jobs:
   sync-readme:
