--- a/.github/workflows/sync-readme.yml
+++ b/.github/workflows/sync-readme.yml
@@ -4,9 +4,9 @@ on:
   # Manual trigger
   workflow_dispatch:
   
-  # Scheduled run Weekly on Sunday
+  # Scheduled run every 12 hours
   schedule:
-    - cron: '0 0 * * 0'
+    - cron: '0 */12 * * *'
 
 jobs:
   sync-readme:
