--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "id": "cassette",
-  "name": "Cassette",
+  "id": "obsidian-myanimenotes",
+  "name": "MyAnimeNotes",
   "version": "1.0.7",
   "minAppVersion": "0.15.0",
   "description": "Sync your anime and manga from MyAnimeList (MAL).",
