--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "obsidian-myanimenotes",
+  "id": "myanimenotes",
   "name": "MyAnimeNotes",
   "version": "1.0.7",
   "minAppVersion": "0.15.0",
