--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Zarakasi",
   "license": "MIT",
   "dependencies": {
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "dayjs": "^1.11.10"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
