--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^16.11.6",
-    "@typescript-eslint/eslint-plugin": "5.29.0",
-    "@typescript-eslint/parser": "5.29.0",
     "builtin-modules": "3.3.0",
     "esbuild": "0.17.3",
+    "eslint": "^9.17.0",
+    "eslint-plugin-obsidianmd": "latest",
+    "globals": "^15.14.0",
+    "typescript-eslint": "^8.18.0",
     "obsidian": "latest",
     "tslib": "2.4.0",
-    "typescript": "4.7.4"
+    "typescript": "^5.7.2"
   }
 }
