--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "MyAnimeNotes",
-  "version": "1.0.11",
-  "description": "Make your media a part of your knowledge. Sync your media items from MyAnimeList directly into your vault.",
-  "main": "main.js",
-  "scripts": {
-    "typecheck": "tsc -noEmit -skipLibCheck",
-    "build": "npm run typecheck && node esbuild.config.mjs production",
-    "build:fast": "node esbuild.config.mjs production",
-    "dev": "node esbuild.config.mjs",
-    "version": "node version-bump.mjs && git add manifest.json versions.json"
-  },
-  "author": "Zarakasi",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^16.11.6",
-    "builtin-modules": "3.3.0",
-    "esbuild": "0.17.3",
-    "eslint": "^9.17.0",
-    "eslint-plugin-obsidianmd": "latest",
-    "globals": "^15.14.0",
-    "typescript-eslint": "^8.18.0",
-    "obsidian": "latest",
-    "tslib": "2.4.0",
-    "typescript": "^5.7.2"
-  }
+    "name": "MyAnimeNotes",
+    "version": "1.0.11",
+    "description": "Make your media a part of your knowledge. Sync your media items from MyAnimeList directly into your vault.",
+    "main": "main.js",
+    "type": "module",
+    "scripts": {
+        "typecheck": "tsc -noEmit -skipLibCheck",
+        "build": "npm run typecheck && node esbuild.config.mjs production",
+        "dev": "node esbuild.config.mjs",
+        "version": "node version-bump.mjs && git add manifest.json versions.json",
+        "lint": "eslint ."
+    },
+    "author": "Zarakasi",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/node": "^16.11.6",
+        "esbuild": "0.25.5",
+        "eslint-plugin-obsidianmd": "latest",
+        "globals": "^15.14.0",
+        "typescript-eslint": "8.35.1",
+        "tslib": "2.4.0",
+        "typescript": "^5.8.3",
+        "@eslint/js": "9.30.1",
+        "jiti": "2.6.1"
+    },
+    "dependencies": {
+        "obsidian": "latest"
+    }
 }
